src/test/resources/org/nest/nestml/_cocos/valid/variableBlockDefinedMultipleTimes.nestml
neuron variableBlockDefinedMultipleTimes:
  state: end
  parameters: end
  internals: end
end