src/test/resources/org/nest/nestml/_cocos/invalid/variableBlockDefinedMultipleTimes.nestml
neuron variableBlockDefinedMultipleTimes:
  state: end
  state: end
  parameters: end
  parameters: end
  internals: end
  internals: end
end